<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.klab</groupId>
  <artifactId>klab-commons-csv</artifactId>
  <name>klab-commons-csv</name>
  <organization>
    <name>KLab Inc.</name>
    <url>http://www.klab.com</url>
  </organization>
  <version>2.0.1</version>
  <url>https://github.com/umjammer/klab-commons-csv</url>
  <description>KLab Commons CSV API

2.0.2

    maintenance release

2.0.1

    allow different size between pojo and csv and gap sequences

2.0.0

    more simple, with only annotation and util
    enabled without dao
    refactoring

TODO

    apache commons csv provider</description>
  <distributionManagement>
    <repository>
      <id>internal.repo</id>
      <name>Temporary Staging Repository</name>
      <url>file://${project.build.directory}/mvn-repo</url>
    </repository>
  </distributionManagement>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>utf-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.5</version>
      <scope>test</scope>
      <optional>false</optional>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.1</version>
      <optional>false</optional>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.0.6</version>
    </dependency>
  </dependencies>
  <scm>
    <url>https://github.com/umjammer/klab-commons-csv</url>
  </scm>
  <issueManagement>
    <url>https://github.com/umjammer/klab-commons-csv/issues</url>
  </issueManagement>
</project>
